# search-engine

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  dune-project  flake.nix  search-engine.cabal  search_engine.install  search_engine.opam
.direnv/: flake-profile-1-link  flake-profile-2-link
app/: Main.hs
client/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
client/src/: app.html
client/src/lib/: Error.svelte  Logo.svelte  api.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/api/search/: +server.ts
client/src/routes/search/[uri]/: +layout.svelte  +page.server.ts  +page.svelte
client/src/routes/search/[uri]/[query]/: +page.server.ts  +page.svelte
lib/: dune
nix/: default.nix  server.nix  shell.nix
server/: README.md  dune-project  search_engine.opam
server/docs/: input.html
server/src/crawler/: crawler.ml  crawler.mli
server/src/http/: dune  index_handler.ml  index_handler.mli  query_handler.mli  search_handler.ml  server.ml  server.mli
server/src/lexer/: dune  lexer.ml  lexer.mli
server/src/parser/: parser.ml  parser.mli
server/src/storage/: dune  query.ml  query.mli  storage.ml  storage.mli
src/: Crawler.hs  Doc.hs  Http.hs  Lexer.hs
src/crawler/: crawler.ml  crawler.mli  dune
src/http/: dune  index_handler.ml  index_handler.mli  network.ml  query_handler.ml  response.ml  response.mli  server.ml  server.mli
src/identifiers/: dune  token.mli
src/lexer/: dune  lexer.ml  lexer.mli
src/parser/: dune  parser.ml  parser.mli
src/storage/: dune  query.ml  query.mli  storage.ml  storage.mli
test/: dune
