cabal-version:      2.4
name:               search-engine
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             henri
maintainer:         henri@henr.in

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Lexer,
        Doc

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        http-conduit ^>=2.3.8.3,
        tagsoup ^>=0.14.8

    hs-source-dirs:   src
    default-language: Haskell2010

executable search-engine
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        search-engine

    hs-source-dirs:   app
    default-language: Haskell2010
